--- a/src/index.html
+++ b/src/index.html
@@ -71,10 +71,91 @@
 		@@include('html/products-block.html',{
 			"title": "Хиты продаж" 
 		})
-		
+		@@include('html/products-block.html',{
+			"title": "Новинки" 
+		})
+		<section class="page-sale">
+			<div class="page-sale__container sale-page">
+				<div class="sale-page__block block-sale">
+					<div class="block-sale__discounts discounts-sale">
+						<div class="discounts-sale__text">
+							<a href="#">Скидки до 30%<br>на сигвеи</a>
+						</div>
+						<div class="discounts-sale__img">
+							<a href=""><img src="@img/segway-sale.png" width="139px" alt="segway"></a>
+						</div>
+					</div>
+					<div class="block-sale__offer offer-sale">
+						<div class="offer-sale__text">
+							<a href="#">Неделя<br>смарт часов</a>
+						</div>
+						<div class="offer-sale__img">
+							<a href=""><img src="@img/watch-sale.png" width="139px" alt="watch"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		@@include('html/products-block.html',{
+			"title": "Сигвеи" 
+		})
+		@@include('html/products-block.html',{
+			"title": "Моноколеса" 
+		})
+		<section class="page-sale">
+			<div class="page-sale__container sale-page">
+				<div class="sale-page__block block-sale">
+					<div class="block-sale__discounts discounts-sale">
+						<div class="discounts-sale__text">
+							<a href="#">Распродажа<br>до — 50%</a>
+						</div>
+						<div class="discounts-sale__img">
+							<a href=""><img src="@img/percent.png" width="139px" alt="segway"></a>
+						</div>
+					</div>
+					<div class="block-sale__offer offer-sale">
+						<div class="offer-sale__text">
+							<a href="#">Smart Balance Premium<br>по специальной цене</a>
+						</div>
+						<div class="offer-sale__img">
+							<a href=""><img src="@img/watch1.png" width="139px" alt="watch"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		@@include('html/products-block.html',{
+			"title": "Электровелосипеды" 
+		})
+		<section class="page-news">
+			<div class="page-news__container">
+				<div class="page-news__header news-page-header">
+					<h2 class="news-page-header__title">Новости</h2>
+					<a href="#" class="news-page-header__more more">Читать все</a>
+				</div>
+				<div class="page-news__body news-page-body">
+					<div class="news-page-body__shop shop-news">
+						<h3 class="shop-news__title">Открытие нового магазина</h3>
+						<p class="shop-news__describe">Разнообразный и богатый опыт говорит нам, что консультация с широким активом требует от нас анализа анализа существующих паттернов поведения</p>
+						<div class="shop-news__more more-news">
+							<a class="more-news__link more">Подробнее</a>
+							<div class="more-news__date">05 июня 2021</div>
+						</div>
+					</div>
+					<div class="news-page-body__work work-news">
+						<h3 class="work-news__title">Работа в праздничные дни</h3>
+						<p class="work-news__describe">Принимая во внимание показатели успешности, социально-экономическое развитие играет определяющее значение для вывода текущих активов</p>
+						<div class="work-news__more more-news">
+							<a class="more-news__link more">Подробнее</a>
+							<div class="more-news__date">05 июня 2021</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
-
-
+	
+	
 
 	@@include('html/footer.html',{})
 	<script src="js/app.min.js"></script>
