created page of catalog

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -27,9 +27,9 @@
 
                 </ul>
             </nav>
-            <nav class="inner-footer__menu menu-footer">
+            <nav data-spollers="580,max" class="inner-footer__menu menu-footer">
+                <button  data-spoller class="menu-footer__btn">Для клиента</button>
                 <ul class="menu-footer__list menu-for-clients">
-                    <li class="menu-footer__item"><a href="#" class="menu-footer__link">Для клиента</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Как купить</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Доставка и оплата</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Кредит</a></li>
@@ -40,9 +40,9 @@
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Сервис и гарантия</a></li>
                 </ul>
             </nav>
-            <nav class="inner-footer__menu menu-footer ">
-                <ul class="menu-footer__list menu-shop">
-                    <li class="menu-footer__item"><a href="#" class="menu-footer__link">О магазине</a></li>
+            <nav data-spollers="580,max" class="inner-footer__menu menu-footer ">
+                <button data-spoller class="menu-footer__btn">О магазине</button>
+                <ul class="menu-footer__list menu-shop ">
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Отзывы</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Наши преимущества</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">История компании</a></li>
@@ -51,9 +51,10 @@
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Вакансии</a></li>
                 </ul>
             </nav>
-            <nav class="inner-footer__menu menu-footer">
+            <nav data-spollers="580,max" class="inner-footer__menu menu-footer">
+                <button data-spoller class="menu-footer__btn">Сотрудничество</button>
                 <ul class="menu-footer__list menu-cooperation">
-                    <li class="menu-footer__item"><a href="#" class="menu-footer__link">Сотрудничество</a></li>
+                    <li class="menu-footer__item"><a href="#" class="menu-footer__link"></a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Оптом</a></li>
                     <li class="menu-footer__item"><a href="#" class="menu-footer__link">Дропшиппинг</a></li>
                 </ul>
@@ -73,4 +74,8 @@
             </div>
         </div>
     </div>
+    <!-- <div data-spollers="767.98,max" class="block">
+        <button data-spoller class="block__title">кнопка 1</button>
+        <div class="block__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, debitis.</div>
+    </div> -->
 </footer>
