--- a/src/html/header.html
+++ b/src/html/header.html
@@ -23,7 +23,7 @@
             <div class="body-header__catalog catalog-header">
                 <ul class="catalog-header__list">
                     <li class="catalog-header__item ">
-                        <a href="" class="catalog-header__link _icon-menu"><span>Каталог товаров</span></a>
+                        <a href="catalog.html" class="catalog-header__link _icon-menu"><span>Каталог товаров</span></a>
                         <span class="menu__arrow arrow"></span>
                         <ul class="sub-menu__list">
                             <li class="sub-menu__item"><a href="#" data-goto="" class="sub-menu__link"><img class="sub-menu__img" src="@img/hoverboard.png" alt="Гироскутеры"><span>Гироскутеры</span></a></li>
