--- a/src/catalog.html
+++ b/src/catalog.html
@@ -12,7 +12,7 @@
 				<nav class="page__breadcrumbs breadcrumbs">
 					<ul class="breadcrumbs__list">
 						<li class="breadcrumbs__item">
-							<a href="" class="breadcrumbs__link">Главная</a>
+							<a href="index.html" class="breadcrumbs__link">Главная</a>
 						</li>
 						<li class="breadcrumbs__item">
 							<span href="" class="breadcrumbs__current">Каталог</span>
@@ -151,11 +151,11 @@
 							<!-- articles -->
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -192,11 +192,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -233,11 +233,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -274,11 +274,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -315,11 +315,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -356,11 +356,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -397,11 +397,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -438,11 +438,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
@@ -479,11 +479,11 @@
 							</article>
 							<article class="product-card">
 								<div class="product-card__img">
-									<img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+									<a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a> 
 								</div>
 								<div class="product-card__body">
 									<div class="product-card__title">Сигвеи</div>
-									<div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+									<div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
 									<div class="actions-card__rating rating rating_set">
 										<div class="rating__body">
 											<div class="rating__active"></div>
