--- a/src/html/products-block.html
+++ b/src/html/products-block.html
@@ -2,16 +2,16 @@
     <div class="products-block__container">
         <div class="products-block__header">
             <h2 class="products-block__title">@@title</h2>
-            <a href="" class="products-block__more">Все товары </a>
+            <a href="catalog.html" class="products-block__more">Все товары </a>
         </div>
         <div class="products-block__body">
             <article class="product-card">
                 <div class="product-card__img">
-                    <img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+                    <a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a>
                 </div>
                 <div class="product-card__body">
                     <div class="product-card__title">Сигвеи</div>
-                    <div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+                    <div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a> </div>
                     <div class="actions-card__rating rating rating_set">
                         <div class="rating__body">
                             <div class="rating__active"></div>
@@ -49,11 +49,11 @@
             </article>
             <article class="product-card">
                 <div class="product-card__img">
-                    <img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+                    <a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a>
                 </div>
                 <div class="product-card__body">
                     <div class="product-card__title">Сигвеи</div>
-                    <div class="product-card__describe">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</div>
+                    <div class="product-card__describe"> <a href="product.html">Гироскутер Smart Balance Premium 10.5 Зелёный граффити</a></div>
                     <div class="actions-card__rating rating rating_set">
                         <div class="rating__body">
                             <div class="rating__active"></div>
@@ -90,11 +90,11 @@
             </article>
             <article class="product-card">
                 <div class="product-card__img">
-                    <img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+                   <a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a>
                 </div>
                 <div class="product-card__body">
                     <div class="product-card__title">Сигвеи</div>
-                    <div class="product-card__describe">Гироскутер Smart Balance</div>
+                    <div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance</a></div>
                     <div class="actions-card__rating rating rating_set">
                         <div class="rating__body">
                             <div class="rating__active"></div>
@@ -131,11 +131,11 @@
             </article>
             <article class="product-card">
                 <div class="product-card__img">
-                    <img src="@img/product-cards/Ішпмфн.png" alt="Sigvay" class="img-card">
+                   <a href="product.html"><img src="@img/product-cards/Sigvay.jpg" alt="Sigvay" class="img-card"></a>
                 </div>
                 <div class="product-card__body">
                     <div class="product-card__title">Сигвеи</div>
-                    <div class="product-card__describe">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</div>
+                    <div class="product-card__describe"><a href="product.html">Гироскутер Smart Balance Well 6.5 Хип-Хоп (АКВАЗАЩИТА)</a></div>
                     <div class="actions-card__rating rating rating_set">
                         <div class="rating__body">
                             <div class="rating__active"></div>
