--- a/src/index.html
+++ b/src/index.html
@@ -14,51 +14,51 @@
 						<div class="swiper-wrapper  slider-block__items">
 							<div class="swiper-slide slider-block__item item-slider">
 								<div class="item-slider__info info-slider">
-									<div class="info-slider__title">Apple Watch<br>Series 6 </div>
-									<div class="info-slider__describe">уже в наличии</div>
+									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 6 </a></div>
+									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
 								</div>
 								<div class="item-slider__media">
-									<img class="media__img" src="@img/watch1.png" alt="watch" >
+									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
 								</div>
 								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
 							</div>
 							<div class="swiper-slide slider-block__item item-slider">
 								<div class="item-slider__info info-slider">
-									<div class="info-slider__title">Apple Watch<br>Series 5 </div>
-									<div class="info-slider__describe">уже в наличии</div>
+									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 5 </a> </div>
+									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
 								</div>
 								<div class="item-slider__media">
-									<img class="media__img" src="@img/watch1.png" alt="watch" >
+									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
 								</div>
 								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
 							</div>
 							<div class="swiper-slide slider-block__item item-slider">
 								<div class="item-slider__info info-slider">
-									<div class="info-slider__title">Apple Watch<br>Series 4 </div>
-									<div class="info-slider__describe">уже в наличии</div>
+									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 4 </a></div>
+									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
 								</div>
 								<div class="item-slider__media">
-									<img class="media__img" src="@img/watch1.png" alt="watch" >
+									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
 								</div>
 								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
 							</div>
 							<div class="swiper-slide slider-block__item item-slider">
 								<div class="item-slider__info info-slider">
-									<div class="info-slider__title">Apple Watch<br>Series 3 </div>
-									<div class="info-slider__describe">уже в наличии</div>
+									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 3 </a></div>
+									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
 								</div>
 								<div class="item-slider__media media">
-									<img class="media__img" src="@img/watch1.png" alt="watch">
+									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
 								</div>
 								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
 							</div>
 							<div class="swiper-slide slider-block__item item-slider">
 								<div class="item-slider__info info-slider">
-									<div class="info-slider__title">Apple Watch<br>Series 2 </div>
-									<div class="info-slider__describe">уже в наличии</div>
+									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 2</a></div>
+									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
 								</div>
 								<div class="item-slider__media">
-									<img class="media__img" src="@img/watch1.png" alt="watch">
+									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
 								</div>
 								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
 							</div>
@@ -69,10 +69,10 @@
 			</div>
 		</section>
 		@@include('html/products-block.html',{
-			"title": "Хиты продаж" 
+		"title": "Хиты продаж"
 		})
 		@@include('html/products-block.html',{
-			"title": "Новинки" 
+		"title": "Новинки"
 		})
 		<section class="page-sale">
 			<div class="page-sale__container sale-page">
@@ -97,10 +97,10 @@
 			</div>
 		</section>
 		@@include('html/products-block.html',{
-			"title": "Сигвеи" 
+		"title": "Сигвеи"
 		})
 		@@include('html/products-block.html',{
-			"title": "Моноколеса" 
+		"title": "Моноколеса"
 		})
 		<section class="page-sale">
 			<div class="page-sale__container sale-page">
@@ -125,7 +125,7 @@
 			</div>
 		</section>
 		@@include('html/products-block.html',{
-			"title": "Электровелосипеды" 
+		"title": "Электровелосипеды"
 		})
 		<section class="page-news">
 			<div class="page-news__container">
@@ -134,26 +134,32 @@
 					<a href="#" class="news-page-header__more more">Читать все</a>
 				</div>
 				<div class="page-news__body news-page-body">
-					<div class="news-page-body__shop shop-news">
-						<h3 class="shop-news__title">Открытие нового магазина</h3>
-						<p class="shop-news__describe">Разнообразный и богатый опыт говорит нам, что консультация с широким активом требует от нас анализа анализа существующих паттернов поведения</p>
-						<div class="shop-news__more more-news">
-							<a class="more-news__link more">Подробнее</a>
-							<div class="more-news__date">05 июня 2021</div>
+					<a href="#" class="news-page-body__shop shop-news">
+						<div class=" ">
+							<h3 class="shop-news__title">Открытие нового магазина</h3>
+							<p class="shop-news__describe">Разнообразный и богатый опыт говорит нам, что консультация
+								с широким активом требует от нас анализа анализа существующих паттернов поведения</p>
+							<div class="shop-news__more more-news">
+								<span class="more-news__link more">Подробнее</span>
+								<div class="more-news__date">05 июня 2021</div>
+							</div>
 						</div>
-					</div>
-					<div class="news-page-body__work work-news">
+					</a>
+
+					<a class="news-page-body__work work-news">
 						<h3 class="work-news__title">Работа в праздничные дни</h3>
-						<p class="work-news__describe">Принимая во внимание показатели успешности, социально-экономическое развитие играет определяющее значение для вывода текущих активов</p>
+						<p class="work-news__describe">Принимая во внимание показатели успешности,
+							социально-экономическое развитие играет определяющее значение для вывода текущих активов</p>
 						<div class="work-news__more more-news">
-							<a class="more-news__link more">Подробнее</a>
+							<span class="more-news__link more">Подробнее</span>
 							<div class="more-news__date">05 июня 2021</div>
 						</div>
-					</div>
+					</a>
 				</div>
 			</div>
 		</section>
 	</main>
+
 	@@include('html/footer.html',{})
 	<script src="js/app.min.js"></script>
 </body>
