--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,3 +1,81 @@
+<div id="popup" class="popup">
+    <div class="popup__body">
+        <div class="popup__content">
+            <a href="" class="popup__close close-popup">X</a>
+            <div class="popup__title">Вход</div>
+            <form action="#" class="popup__form form">
+                <div class="form__group">
+                    <label class="form__label">
+                        Эл. почта или телефон
+                        <input type="email">
+                    </label>
+                </div>
+                <div class="form__group">
+                    <label class="form__label">
+                        Пароль
+                        <input type="password">
+                        <a href="#" class="form__password">забули пароль?</a>
+                    </label>
+                </div>
+                <div class="form__group_last">
+
+                </div>
+
+                <div class="form__buttons">
+                    <button class="form__btn">Войти</button>
+                </div>
+                <div class="form__actions">
+
+                    <a href="#log-in" class="form__link form__link_center popup-link">Зарегистрироваться</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<div id="log-in" class="popup">
+    <div class="popup__body">
+        <div class="popup__content">
+            <a href="" class="popup__close close-popup">X</a>
+            <div class="popup__title">Регистрация</div>
+            <form action="#" class="popup__form form">
+                <div class="form__group">
+                    <label class="form__label">
+                        Имя
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="form__group">
+                    <label class="form__label">
+                        Эл. почта
+                        <input type="email">
+                    </label>
+                </div>
+                <div class="form__group">
+                    <label class="form__label">
+                        Номер телефона
+                        <input type="tel">
+                    </label>
+                </div>
+                <div class="form__group">
+                    <label class="form__label">
+                        Придумайте пароль
+                        <input type="password">
+                    </label>
+                </div>
+
+                <div class="form__text"><span class="form__text_black">Регистрируясь, вы соглашаетесь
+                        с</span> пользовательским соглашением</div>
+
+                <div class="form__buttons">
+                    <button class="form__btn">Зарегистрироваться</button>
+                </div>
+                <div class="form__actions">
+                    <a href="#popup" class="form__link form__link_center popup-link ">Я уже зарегистрирован</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <footer class="footer">
     <div class="footer__container">
         <div class="footer__inner inner-footer">
@@ -7,10 +85,10 @@
                     <li class="menu-footer__item_tel footer-contact">
                         <ul class="footer-contact__list">
                             <li class="footer-contact__item"><a href="#"
-                                    class="footer-contact__link">+7 (958) 111-95-03</a></li>
+                                    class="footer-contact__link">(+380)-9944-777-60</a></li>
                             <li class="footer-contact__item"><a href="#"
-                                    class="footer-contact__link">+7 (812) 660-50-54</a></li>
-                            <li class="footer-contact__item"><a href="#" class="footer-contact__link">Пн-вс:
+                                    class="footer-contact__link">(+380)-9980-777-60</a></li>
+                            <li class="footer-contact__item "><a href="#" class="footer-contact__link footer-contact__link_grey">Пн-вс:
                                     с 10:00 до 21:00</a></li>
                         </ul>
                     </li>
