--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,8 +3,8 @@
         <div class="top-header__container ">
             <a href="index.html" class="top-header__logo _icon-logo"></a>
             <ul class="top-header__phones phones-top">
-                <li class="phones-top__item"><a href="tel:78126605054" class="phones-top__link">+7 (812) 660-50-54</a></li>
-                <li class="phones-top__item"><a href="tel:79581119503" class="phones-top__link">+7 (958) 111-95-03</a></li>
+                <li class="phones-top__item"><a href="tel:78126605054" class="phones-top__link">(+380)-9944-777-60</a></li>
+                <li class="phones-top__item"><a href="tel:79581119503" class="phones-top__link">(+380)-9980-777-60</a></li>
                 <li class="phones-top__item_grey">Пн-вс: с 10:00 до 21:00</li>
             </ul>
             <div class="top-header__actions actions-top-header ">
@@ -13,9 +13,12 @@
                 <button class="actions-top-header__like svg-header _icon-like"><span>3</span></button>
                 <a href="#" class="actions-top-header__compare svg-header _icon-compare"></a>
                 <a href="#" class="actions-top-header__cart svg-header _icon-cart"><span>1</span></a>
-                <a href="product.html" class="actions-top-header__log-in ">Войти</a>
+                <a href="#popup" class="actions-top-header__log-in popup-link">Войти</a>
             </div>
             <div class="header__hamburger-menu"><span class="menu__icon"></span></div>
+        </div>
+        <div class="serch-input ">
+            <input data-flip="false" type="search" name="search" class="serch-input__btn" placeholder="Поиск" autocomplete="off">
         </div>
     </div>
     <div class="header__body body-header">
@@ -38,14 +41,16 @@
             </div>
             <nav class="body-header__menu menu-header">
                 <ul class="menu-header__list">
-                    <li class="menu-header__item"><a href="product.html" class="menu-header__link">О компании</a></li>
-                    <li class="menu-header__item"><a href="" class="menu-header__link">Акции</a></li>
-                    <li class="menu-header__item"><a href="" class="menu-header__link">Рассрочка 0|0|18</a></li>
-                    <li class="menu-header__item"><a href="" class="menu-header__link">Сервис и гарантия</a></li>
-                    <li class="menu-header__item"><a href="" class="menu-header__link">Контакты</a></li>
-                    <li class="menu-header__item"><a href="" class="menu-header__link">Опт/дропшиппинг</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">О компании</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">Акции</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">Рассрочка 0|0|18</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">Сервис и гарантия</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">Контакты</a></li>
+                    <li class="menu-header__item"><a href="#" class="menu-header__link">Опт/дропшиппинг</a></li>
                 </ul>
             </nav>
         </div>
     </div>
+
+  
 </header>
