change index page

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -41,7 +41,7 @@
             </div>
             <nav class="body-header__menu menu-header">
                 <ul class="menu-header__list">
-                    <li class="menu-header__item"><a href="#" class="menu-header__link">О компании</a></li>
+                    <li class="menu-header__item"><a href="home2.html" class="menu-header__link">О компании</a></li>
                     <li class="menu-header__item"><a href="#" class="menu-header__link">Акции</a></li>
                     <li class="menu-header__item"><a href="#" class="menu-header__link">Рассрочка 0|0|18</a></li>
                     <li class="menu-header__item"><a href="#" class="menu-header__link">Сервис и гарантия</a></li>
