--- a/src/index.html
+++ b/src/index.html
@@ -1,167 +1,140 @@
 <!DOCTYPE html>
-<html lang="en">
-@@include('html/head.html',{
-"title":"Главная"
-})
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Верстка Multipage-technology</title>
+	</head>
+	<body>
+		<div class="rootpage">
+			<h1>Верстка Multipage-technology</h1>
+			<h2>Готові сторінки:</h2>
+			<ol class="rootpage__list">
+				<li><a target="_blank" href="home.html">Головна</a></li>
+				<li><a target="_blank" href="catalog.html">Каталог</a></li>
+				<li><a target="_blank" href="product.html">Карточка товару</a></li>
+			</ol>
+			<div class="rootpage__contacts">
+				<h2>Мої контакти:</h2>
+				<p>Пошта: <a href="mailto:email@gmail.com">andrijvecirko2@gmail.com</a></p>
+				<p>Телефон: <a href="tel:8800800800">(+380) 9942 777 59</a></p>
 
-<body>
-	@@include('html/header.html',{})
-	<main class="page page_home">
-		<section class="page__slider slider ">
-			<div class="slider__container slider-block">
-				<div class="slider-block__body">
-					<div class="swiper attempt">
-						<div class="swiper-wrapper  slider-block__items">
-							<div class="swiper-slide slider-block__item item-slider">
-								<div class="item-slider__info info-slider">
-									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 6 </a></div>
-									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
-								</div>
-								<div class="item-slider__media">
-									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
-								</div>
-								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
-							</div>
-							<div class="swiper-slide slider-block__item item-slider">
-								<div class="item-slider__info info-slider">
-									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 5 </a> </div>
-									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
-								</div>
-								<div class="item-slider__media">
-									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
-								</div>
-								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
-							</div>
-							<div class="swiper-slide slider-block__item item-slider">
-								<div class="item-slider__info info-slider">
-									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 4 </a></div>
-									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
-								</div>
-								<div class="item-slider__media">
-									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
-								</div>
-								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
-							</div>
-							<div class="swiper-slide slider-block__item item-slider">
-								<div class="item-slider__info info-slider">
-									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 3 </a></div>
-									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
-								</div>
-								<div class="item-slider__media media">
-									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
-								</div>
-								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
-							</div>
-							<div class="swiper-slide slider-block__item item-slider">
-								<div class="item-slider__info info-slider">
-									<div class="info-slider__title"> <a href="#">Apple Watch<br>Series 2</a></div>
-									<div class="info-slider__describe"><a href="#">уже в наличии</a></div>
-								</div>
-								<div class="item-slider__media">
-									<a href="#"><img class="media__img" src="@img/watch1.png" alt="watch"></a>
-								</div>
-								<img class="item-slider__waves" src="@img/waves.png" alt="waves">
-							</div>
-						</div>
-						<div class="swiper-pagination"></div>
-					</div>
-				</div>
 			</div>
-		</section>
-		@@include('html/products-block.html',{
-		"title": "Хиты продаж"
-		})
-		@@include('html/products-block.html',{
-		"title": "Новинки"
-		})
-		<section class="page-sale">
-			<div class="page-sale__container sale-page">
-				<div class="sale-page__block block-sale">
-					<div class="block-sale__discounts discounts-sale">
-						<div class="discounts-sale__text">
-							<a href="#">Скидки до 30%<br>на сигвеи</a>
-						</div>
-						<div class="discounts-sale__img">
-							<a href=""><img src="@img/segway-sale.png" width="139px" alt="segway"></a>
-						</div>
-					</div>
-					<div class="block-sale__offer offer-sale">
-						<div class="offer-sale__text">
-							<a href="#">Неделя<br>смарт часов</a>
-						</div>
-						<div class="offer-sale__img">
-							<a href=""><img src="@img/watch-sale.png" width="139px" alt="watch"></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		@@include('html/products-block.html',{
-		"title": "Сигвеи"
-		})
-		@@include('html/products-block.html',{
-		"title": "Моноколеса"
-		})
-		<section class="page-sale">
-			<div class="page-sale__container sale-page">
-				<div class="sale-page__block block-sale">
-					<div class="block-sale__discounts discounts-sale">
-						<div class="discounts-sale__text">
-							<a href="#">Распродажа<br>до — 50%</a>
-						</div>
-						<div class="discounts-sale__img">
-							<a href=""><img src="@img/percent.png" width="139px" alt="segway"></a>
-						</div>
-					</div>
-					<div class="block-sale__offer offer-sale">
-						<div class="offer-sale__text">
-							<a href="#">Smart Balance Premium<br>по специальной цене</a>
-						</div>
-						<div class="offer-sale__img">
-							<a href=""><img src="@img/watch1.png" width="139px" alt="watch"></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		@@include('html/products-block.html',{
-		"title": "Электровелосипеды"
-		})
-		<section class="page-news">
-			<div class="page-news__container">
-				<div class="page-news__header news-page-header">
-					<h2 class="news-page-header__title">Новости</h2>
-					<a href="#" class="news-page-header__more more">Читать все</a>
-				</div>
-				<div class="page-news__body news-page-body">
-					<a href="#" class="news-page-body__shop shop-news">
-						<div class=" ">
-							<h3 class="shop-news__title">Открытие нового магазина</h3>
-							<p class="shop-news__describe">Разнообразный и богатый опыт говорит нам, что консультация
-								с широким активом требует от нас анализа анализа существующих паттернов поведения</p>
-							<div class="shop-news__more more-news">
-								<span class="more-news__link more">Подробнее</span>
-								<div class="more-news__date">05 июня 2021</div>
-							</div>
-						</div>
-					</a>
+		</div>
+	</body>
+	<style>
+		@charset "UTF-8";
+		@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,700&display=swap");
+		* ,*::before, *::after {
+			padding: 0px;
+			margin: 0px;
+			border: 0px;
+			box-sizing: border-box; 
+		}
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+			min-width: 320px;
+			width: 100%;
+			color: #fff;
+			background-color: #2c2932;
+		}
+		body {
+			font-family: Montserrat;
+			font-size: 100%;
+			line-height: 1;
+			font-size: 1rem;
+		}
+		a {
+			text-decoration: underline;
+			color: #ebe691
+		}
+		a:visited {
+			text-decoration: underline;
+			color: #aaa768;
+		}
+			a:hover {
+			text-decoration: none;
+		}
+		ul li {
+			list-style: none;
+		}
+		img {
+			vertical-align: top;
+		}
+		.wrapper {
+			width: 100%;
+			min-height: 100%;
+			overflow: hidden;
+		}
+		.rootpage{
+			padding: 30px;
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+		}
+		@media (max-width: 767px) {
+			.rootpage{
+				padding:30px 15px;
+			}
+		}
+		h1 {
+			color: #ebe691;
+			font-size: 2.5rem;
+			margin: 0px 0px 1.25rem 0px;
+		}
+		@media (max-width: 767px) {
+			h1 {
+				font-size: 1.85rem;
+				margin: 0px 0px 1.25rem 0px;
+			}
+		}
+		h2 {
+			color: #ebe691;
+			font-size: 1.25rem;
+			margin: 0px 0px 1rem 0px;
+		}
+		@media (max-width: 767px) {
+			 h2 {
+				font-size: 1.125rem;
+				margin: 0px 0px 1rem 0px;
+			}
+		}
+		.rootpage__info{
+			line-height: 140%;
+			margin: 0px 0px 1.5rem 0px;
+		}
 
-					<a class="news-page-body__work work-news">
-						<h3 class="work-news__title">Работа в праздничные дни</h3>
-						<p class="work-news__describe">Принимая во внимание показатели успешности,
-							социально-экономическое развитие играет определяющее значение для вывода текущих активов</p>
-						<div class="work-news__more more-news">
-							<span class="more-news__link more">Подробнее</span>
-							<div class="more-news__date">05 июня 2021</div>
-						</div>
-					</a>
-				</div>
-			</div>
-		</section>
-	</main>
-
-	@@include('html/footer.html',{})
-	<script src="js/app.min.js"></script>
-</body>
-
+		.rootpage__list{
+			margin: 0px 0px 2.25rem 1.25rem;
+		}
+		.rootpage__list li:not(:last-child){
+			margin: 0px 0px 15px 0px;
+		}
+		.rootpage__contacts,
+		.rootpage__tnx{
+			border-radius: 200px;
+			padding: 20px 65px;
+			line-height: 140%;
+		}
+		@media (max-width: 767px){
+		.rootpage__contacts,
+		.rootpage__tnx{
+			border-radius:40px;
+			padding: 20px;
+		}
+		}
+		.rootpage__contacts{
+			background: #cc2b2b
+			
+		}
+		.rootpage__contacts a{
+			color: #ebe691;
+		}
+		.rootpage__tnx{
+			background: #c22d63;
+			margin: 0px 0px 1rem 0px;
+		}
+	</style>
 </html>
